apps/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: forgejo-data-claim
      containers:
      - name: app
        image: codeberg.org/forgejo/forgejo:16@sha256:cf5f5ae6acf2ababca0ee3d255705b83a47f35b25e07fc931d694d60664053fe
        volumeMounts:
        - name: data
          mountPath: /data
          subPath: data
        ports:
        - containerPort: 30022
        - containerPort: 3000
      - name: db
        image: postgres:18@sha256:5a5a84b19854a9ffaa54082c166ff4ec27473a361e496e5ea167f298f2da9722
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql
          subPath: database
      - name: redis
        image: valkey/valkey:9@sha256:418652cfb58ef879d4978c33553735d7147016032d5aefaa14c828e611eb9dfd
