apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: default
spec:
  type: NodePort
  selector:
    app: forgejo
  ports:
  - port: 30022
    targetPort: 30022
    nodePort: 30022
