apps/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - git.psquid.net
    secretName: psquid-net-tls
  rules:
  - host: git.psquid.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo-web
            port:
              number: 80
